--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/CodefishSource/FlexBitmapGrid">View on GitHub</a>
 
           <h1 id="project_title">Flex BitmapGrid</h1>
-          <h2 id="project_tagline">A blazing fast vDataGrid for Flex. Uses a bitmap to draw visible columns and rows. Supports Unlimited Number of Rows and Columns.</h2>
+          <h2 id="project_tagline">A blazing fast DataGrid for Flex. Uses a bitmap to draw visible columns and rows. Supports Unlimited Number of Rows and Columns.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/CodefishSource/FlexBitmapGrid/zipball/master">Download this project as a .zip file</a>
@@ -34,11 +34,22 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This grid was created to fulfill a simple need, super fast horizontal and vertical scrolling with unlimited numbers of rows and columns. 
+The trick is to Draw only the visible rows and columns on a bitmap canvas.
+It uses only one ItemRenderer to draw all the cells. 
+We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.
+</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code>
+	<bitmapGrid:BitmapGrid id="bitmapGrid" width="100%" height="100%" columnWidth="100" rowHeight="30"
+					  dataProvider="{days}" columns="{columns}" >
+		<bitmapGrid:headerRenderer>
+			<local:BitmapGridHeaderRenderer />
+		</bitmapGrid:headerRenderer>
+		<bitmapGrid:itemRenderer>
+			<local:BitmapGridItemRenderer  />
+		</bitmapGrid:itemRenderer>
+	</bitmapGrid:BitmapGrid>
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
