--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Flex BitmapGrid.</h3>
 
 <p>This grid was created to fulfill a simple need, super fast horizontal and vertical scrolling with unlimited numbers of rows and columns. 
 The trick is to Draw only the visible rows and columns on a bitmap canvas.
@@ -40,7 +40,7 @@ It uses only one ItemRenderer to draw all the cells.
 We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.
 </p>
 
-<pre><code>
+<pre>
 	<bitmapGrid:BitmapGrid id="bitmapGrid" width="100%" height="100%" columnWidth="100" rowHeight="30"
 					  dataProvider="{days}" columns="{columns}" >
 		<bitmapGrid:headerRenderer>
@@ -50,7 +50,7 @@ We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders 
 			<local:BitmapGridItemRenderer  />
 		</bitmapGrid:itemRenderer>
 	</bitmapGrid:BitmapGrid>
-</code></pre>
+</pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
