--- a/index.html
+++ b/index.html
@@ -41,15 +41,7 @@ We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders 
 </p>
 
  <pre><code>
-	 <![CDATA[
-         <div>
-             <ol>
-                 <li>a</li>
-                 <li>b</li>
-                 <li>c</li>
-             </ol>
-         </div>
-     ]]>
+	 dfsafsad
   </code></pre>
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
