--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ It uses only one ItemRenderer to draw all the cells.
 We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.
 </p>
 
-<iframe src="BitmapGridTest.html" width="600" height="600" scrolling="no" frameborder="0"/>
+<iframe src="BitmapGridTest.html" width="600" height="600" >
+</iframe>
+
 
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
