--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Check our website at <a href="http://www.codefish.com">Codefish</a> or contact me at <a href="mailto:rshibley@codefish.com">Ronny Shilbey</a></p>
+<p>Check our website at <a href="http://www.codefish.com">Codefish</a> or contact me at <a href="mailto:rshibley@codefish.com">rshibley@codefish.com</a></p>
       </section>
     </div>
 
