--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <p>This grid was created to fulfill a simple need, super fast horizontal and vertical scrolling with unlimited numbers of rows and columns. 
 The trick is to Draw only the visible rows and columns on a bitmap canvas.
 It uses only one ItemRenderer to draw all the cells. 
-We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.
+We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.<br/><br/>
+Anyhow please do keep in mind this was created to just draw cells, so there is'nt much functionality there... i'm adding code on a need to have basis. So if you wish to contribute, you're more than welcome. 
 </p>
 
 <p>Right click to View Source</p>
