--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Flex BitmapGrid.</h3>
 
-<p>This grid was created to fulfill a simple need, super fast horizontal and vertical scrolling with unlimited numbers of rows and columns. 
+<p>This grid was created to fulfil a simple need, super fast horizontal and vertical scrolling with unlimited number of rows and columns. 
 The trick is to Draw only the visible rows and columns on a bitmap canvas.
 It uses only one ItemRenderer to draw all the cells. 
-We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second a scrolls like a charm.<br/><br/>
-Anyhow please do keep in mind this was created to just draw cells, so there is'nt much functionality there... i'm adding code on a need to have basis. So if you wish to contribute, you're more than welcome. 
+We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second and scrolls like a charm.<br/><br/>
+Anyhow please do keep in mind this was created to just draw cells, so there not much grid functionality there... i'm adding code on a need to have basis. If you wish to contribute, you're more than welcome. 
 </p>
 
 <p>Right click to View Source</p>
@@ -51,6 +51,9 @@ Anyhow please do keep in mind this was created to just draw cells, so there is'n
 
 <p>Created by Ronny Shibley(<a href="https://github.com/rshilbey" class="user-mention">@rshibley</a>), Inspired by ZOLTANB
  <a href="http://zoltanb.co.uk/flex-performance-tuning-superfast-list-component/"> Flex Performance Tuning </a> 
+</p>
+<p>
+Special thanks to the Flex Team and Mailing List :)
 </p>
 <p>
 <b>Please don't hesitate to contact me if you wish to be added on the Contributors List.</b>
