--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Flex BitmapGrid.</h3>
 
-<p>This grid was created to fulfil a simple need, super fast horizontal and vertical scrolling with unlimited number of rows and columns. 
+<p>This grid was created to fulfil a simple need for <a href="http://www.outswitch.com" >Outswitch.com</a>, super fast horizontal and vertical scrolling with unlimited number of rows and columns. 
 The trick is to Draw only the visible rows and columns on a bitmap canvas.
 It uses only one ItemRenderer to draw all the cells. 
 We use it for a calendar with 365 columns and 500 Rows. It never hangs, renders in less than a second and scrolls like a charm.<br/><br/>
