--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@ Special thanks to the Flex Team and Mailing List :)
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Check our website at <a href="http://www.codefish.com">Codefish</a> or contact me at <a href="mailto:rshibley@codefish.com">rshibley@codefish.com</a></p>
-      </section>
-    </div>
 
+
+<h3>
+<a name="discussions" class="anchor"></a>Discussions</h3>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'flexbitmapgrid'; // required: replace example with your forum shortname
@@ -93,7 +94,13 @@ Special thanks to the Flex Team and Mailing List :)
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+
+
+
+
+
+      </section>
+    </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
