--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Flex BitmapGrid.</h3>
 
+<a href="transparent.png"><img style="border:0;" src="transparent.png" alt="CodefishImage" width="42" height="42"></a>
+
 <p>This grid was created to fulfil a simple need for <a href="http://www.outswitch.com" >Outswitch.com</a>, super fast horizontal and vertical scrolling with unlimited number of rows and columns. 
 The trick is to Draw only the visible rows and columns on a bitmap canvas.
 It uses only one ItemRenderer to draw all the cells. 
@@ -49,7 +51,7 @@ Anyhow please do keep in mind this was created to just draw cells, so there not 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>Created by Ronny Shibley(<a href="https://github.com/rshilbey" class="user-mention">@rshibley</a>), Inspired by ZOLTANB
+<p>Created by Ronny Shibley(<a href="https://github.com/rshibley" class="user-mention">@rshibley</a>), Inspired by ZOLTANB
  <a href="http://zoltanb.co.uk/flex-performance-tuning-superfast-list-component/"> Flex Performance Tuning </a> 
 </p>
 <p>
