--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <table style="border: 0px; border-collapse: collapse; border: none;" >
 			<tr align="center">
-			  <td style="vertical-align:middle; border: none;" ><a href="trasparent.png"><img border="0" style="border-style: none;" src="transparent.png" alt="CodefishImage" width="80" height="80"></a></td>
+			  <td style="vertical-align:middle; border: none;" ><a href="http://www.codefish.com"><img border="0" style="border-style: none;" src="transparent.png" alt="CodefishImage" width="80" height="80"></a></td>
 			  <td style="vertical-align:middle; border: none;" ><p style="font-size: 50px; color: white">Flex BitmapGrid</p></td> 
 			</tr>
 		</table>
